2010-04-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-new-tweets-spec): new variable
	for timeline spec on running `twittering-new-tweets-hook'.

	* twittering-mode.el: Add an experimental notifier for unread
	statuses on mode-line. You can enable it by invoking
	`twittering-enable-unread-status-notifier'. To disable it, invoke
	`twittering-disable-unread-status-notifier'.
	(twittering-unread-status-info): new variable.
	(twittering-reset-unread-status-info-if-necessary): new function.
	(twittering-set-number-of-unread): new function.
	(twittering-make-unread-status-notifier-string): new function.
	(twittering-update-unread-status-info): new function.
	(twittering-enable-unread-status-notifier): new function.
	(twittering-disable-unread-status-notifier): new function.

	* twittering-mode.el: Support fixed fill-column for the format
	specifier "%FILL{...}". Thanks to William Xu.
	(twittering-fill-column): new variable.

2010-04-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Improve compatibility with global-font-lock mode.
	(twittering-mode-init-global): use `bold' instead of
	`font-lock-string-face' if it has not been bound yet.
	`twittering-mode' does not require loading `font-lock'.
	(twittering-mode-setup): prevent `global-font-lock-mode' enabling
	`font-lock-mode' by using buffer-local `font-lock-global-modes'.
	`twittering-mode' can be used with/without any configuration for
	font-lock mode.

	* twittering-mode.el: Replace hard-coded hostnames with
	variables and functions. Thanks to William Xu.
	(twittering-api-host): new variable.
	(twittering-api-search-host): new variable.
	(twittering-web-host): new variable.
	(twittering-get-search-url): new function.
	(twittering-make-clickable-status-datum): call
	`twittering-get-search-url' instead of using hard-coded hostname.

	* twittering-mode.el (twittering-start-http-session-curl): do not
	overwrite headers that `curl' will define internally. Thanks to
	William Xu.